package ru.alexkekiy.interfaces;

import ru.alexkekiy.items.Item;

public interface ItemActions {
    void take(Item i);

    void put(Item i);
}
