package ru.alexkekiy.ownable.locations.real;

import ru.alexkekiy.ownable.locations.abstracts.LocThrough;

public class GraveTrail extends LocThrough {

    public GraveTrail(String n) {
        super(n);
    }

}

