package ru.alexkekiy.ownable.locations.real;

import ru.alexkekiy.ownable.locations.abstracts.LocThrough;

public class Out extends LocThrough {

    public Out() {
        super("вне");
    }

}


