package ru.alexkekiy.ownable.locations.real;

import ru.alexkekiy.ownable.locations.abstracts.Loc;

public class Tombs extends Loc {


    public Tombs(String n) {
        super(n);
    }
}

